--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
@@ -6,84 +6,90 @@
         xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Forgot Password" Height="400" Width="650"
+        Title="Forgot Password"
+        Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
-        Icon="/Resources/Tool-Data-Icon.png">
-    <Border Width="650"
-            Height="400"
-            Background="White"
-            CornerRadius="6">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="15"
-                              Direction="-90" 
-                              RenderingBias="Quality" 
-                              ShadowDepth="2" 
-                              Color="Gray" />
-        </Border.Effect>
-        <StackPanel Orientation="Vertical"
-                    Margin="10,20,10,20">
-            <TextBlock Text="Forgot Password" 
-                       FontSize="25"
+        Style="{StaticResource RoundedWindowStyle}">
+
+    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+        <StackPanel Style="{StaticResource WrapperStackPanel}" Height="380" Width="630">
+
+            <!-- Close Button (jobb felső sarokban, ha van ilyen stílus) -->
+            <Button Style="{StaticResource CloseButtonStyle}"
+                    x:Name="btn_Close"
+                    Click="btn_Close_Click"/>
+
+            <!-- Cím -->
+            <TextBlock Text="Forgot Password"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       FontWeight="Bold"
-                       Padding="10"/>
+                       Style="{StaticResource h1}" />
+
+            <!-- Tartalomrács -->
             <Grid VerticalAlignment="Center">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Email:" 
+                <!-- Email -->
+                <TextBlock Text="Email"
                            Grid.Row="0"
-                           Margin="89,20,0,5"
-                           HorizontalAlignment="Left"/>
+                           Margin="91,8,0,0"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Style="{StaticResource p}" />
                 <TextBox Name="tb_Email"
                          Grid.Row="0"
-                         Padding="0,5"
-                         Width="254"
-                         BorderThickness="0,0,0,1"
+                         Margin="25,0,0,10"
+                         Width="260"
                          HorizontalAlignment="Center"
-                         Margin="0,10,0,10"/>
+                         Style="{StaticResource ModernTextBox}" />
 
-                <TextBlock Text="Temporary Code:" 
-                           Grid.Row="2"
-                           Margin="89,20,0,5"
-                           HorizontalAlignment="Left"/>
-                <TextBox Name="tb_Code"
-                         Grid.Row="2"
-                         Padding="0,5"
-                         Width="254"
-                         BorderThickness="0,0,0,1"
-                         HorizontalAlignment="Center"
-                         Margin="0,10,0,10"/>
-
+                <!-- Send Code gomb -->
                 <Button x:Name="btn_SendCode"
                         Content="Send Code"
                         Grid.Row="1"
                         Margin="0,10,0,10"
-                        Width="200"
+                        Width="140"
+                        Height="35"
                         HorizontalAlignment="Center"
-                        Click="btn_SendCode_Click"/>
+                        Click="btn_SendCode_Click" />
+
+                <!-- Temporary Code -->
+                <TextBlock Text="Temporary Code"
+                           Grid.Row="2"
+                           Margin="91,8,0,0"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Style="{StaticResource p}" />
+                <TextBox Name="tb_Code"
+                         Grid.Row="2"
+                         Margin="25,0,0,10"
+                         Width="260"
+                         HorizontalAlignment="Center"
+                         Style="{StaticResource ModernTextBox}" />
+
+                <!-- Verify Code gomb -->
                 <Button x:Name="btn_VerifyCode"
                         Content="Verify Code"
                         Grid.Row="3"
                         Margin="0,10,0,10"
-                        Width="200"
+                        Width="140"
+                        Height="35"
                         HorizontalAlignment="Center"
-                        Click="btn_VerifyCode_Click"/>
+                        Click="btn_VerifyCode_Click" />
             </Grid>
-
             <Button Content="Back"
-                   x:Name="btn_Back"
-                   Margin="0,20,0,0"
-                   VerticalAlignment="Bottom"
-                   HorizontalAlignment="Center"
-                   Width="100"
-                   Click="btn_Back_Click"/>
+                    x:Name="btn_Back"
+                    Width="80"
+                    Height="30"
+                    Click="btn_Back_Click" />
+
+            <!-- Vissza gomb -->
         </StackPanel>
     </Border>
 </Window>
