--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -7,28 +7,19 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:helper="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Login" Height="400" Width="650"
+        Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
-        Icon="/Resources/Tool-Data-Icon.png">
-    <Border Width="650"
-            Height="400"
-            Background="White"
-            CornerRadius="6">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="15"
-                              Direction ="-90" 
-                              RenderingBias ="Quality" 
-                              ShadowDepth ="2" 
-                              Color ="Gray" />
-        </Border.Effect>
-        <StackPanel Orientation="Vertical"
-                    Margin="10,20,10,20">
-            <TextBlock Text="Login" 
-                       FontSize="25"
+        Style="{StaticResource RoundedWindowStyle}">
+    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+        <StackPanel Style="{StaticResource WrapperStackPanel}" Width="630" Height="380">
+            <Button Style="{StaticResource CloseButtonStyle}"
+                    x:Name="btn_Close"
+                    Click="btn_Close_Click"/>
+            <TextBlock Text="Login"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       FontWeight="Bold"
-                       Padding="10"/>
+                       Style="{StaticResource h1}"/>
+            
             <Grid VerticalAlignment="Center">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -36,113 +27,69 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Text="Email:" 
+                <!-- Email section -->
+                <TextBlock Text="Email" 
                    Grid.Row="1"
-                   Margin="89,41,0,33"
-                   HorizontalAlignment="Left"/>
+                   Margin="90 0 0 0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   Style="{StaticResource p}"/>
                 <TextBox Name="tb_Email"
                          Text="slemkev@hilti.com"
                          Grid.Row="1"
-                         Padding="0,5"
-                         Width="254"
-                         BorderThickness="0,0,0,1"
+                         Width="260"
                          HorizontalAlignment="Center"
-                         Margin="0,33,0,33" Tag=""/>
+                         Margin="25 0 0 10"
+                         Style="{StaticResource ModernTextBox}"/>
                 <TextBlock Text="example@example.com"
-                           IsHitTestVisible="False"
-                           Foreground="Gray"
-                           Margin="188,37,188,0"
-                           VerticalAlignment="Top"
+                           Style="{StaticResource FloatingLabel}"
                            Visibility="{Binding Text, ElementName=tb_Email, Converter={StaticResource BoolToVisibilityConverter}}"
                            Grid.Row="1"/>
+                
+                <!-- Password seciton -->
                 <TextBlock Text="Password" 
                    Grid.Row="3"
-                   Margin="89,0,0,-3"
-                   HorizontalAlignment="Left"/>
+                   Margin="90,0,0,0"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   Style="{StaticResource p}"/>
                 <PasswordBox 
                     x:Name="pb_password"
+                    Margin="25 0 0 0"
                     Grid.Row="3"
-                      Padding="0,5"                           
-                      Width="255"
-                      BorderThickness="0,0,0,1"
-                      HorizontalAlignment="Center" Password="SlemKev123."/>
+                    Width="260"
+                    HorizontalAlignment="Center" 
+                    Password="SlemKev123."
+                    Style="{StaticResource ModernPasswordBox}"/>
             </Grid>
             <Button x:Name="LoginBtn" 
-                    Content="Login" 
-                    Foreground="White"
-                    Background="Black"
-                    Margin="0,25"
+                    Content="Login"
                     Height="35"
-                    Width="250"
+                    Margin="0 20 0 0"
+                    Width="150"
                     Click="LoginBtn_Click">
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <Border x:Name="LoginBorder" Background="{TemplateBinding Background}"
-                                            CornerRadius="16">
-                                        <ContentPresenter HorizontalAlignment="Center" 
-                                                          VerticalAlignment="Center"/>
-                                    </Border>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="AliceBlue" TargetName="LoginBorder"  />
-                                            <Setter Property="TextBlock.Foreground" Value="Black"  TargetName="LoginBorder" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Button.Style>
+
             </Button>
-            <TextBlock Text="forgot password?" 
-                          x:Name="tb_forgotPassword"
-                       HorizontalAlignment="Right"
-                       MouseLeftButtonDown="tb_forgotPassword_MouseLeftButtonDown"
-                       />
-            <TextBlock Text="Not a member?"
-                       x:Name="tb_notMember"
-                         Margin="2"
-                       VerticalAlignment="Bottom"
-                       HorizontalAlignment="Center"
-                       MouseLeftButtonDown="tb_notMember_MouseLeftButtonDown"
-                       />
-            <Button Content="Back"
-                   x:Name="btn_back"
-                    
-                    Foreground="White"
-                    Background="Black"
-                    Margin="0,10"
-                    Height="20"
-                    Width="100"
-                    VerticalAlignment="Bottom"
-                    HorizontalAlignment="Center"
-                    Click="btn_back_Click">
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <Border x:Name="BackBorder" Background="{TemplateBinding Background}"
-                                            CornerRadius="16">
-                                        <ContentPresenter HorizontalAlignment="Center" 
-                                                          VerticalAlignment="Center"/>
-                                    </Border>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="AliceBlue" TargetName="BackBorder"  />
-                                            <Setter Property="TextBlock.Foreground" Value="Black"  TargetName="BackBorder" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Button.Style>
-            </Button>
+            <!-- Forgot password and not a member links -->
+            <StackPanel Orientation="Vertical"
+            Margin="0,10,0,10"
+            HorizontalAlignment="Center">
+
+               <TextBlock Text="Forgot password?" 
+               HorizontalAlignment="Center"
+               x:Name="tb_forgotPassword"
+               Cursor="Hand"
+               Margin="0 5 0 5"
+               MouseLeftButtonDown="tb_forgotPassword_MouseLeftButtonDown"/>
+
+               <TextBlock Text="I don't have an account yet." 
+               HorizontalAlignment="Center"
+               x:Name="tb_notMember"
+               Cursor="Hand"
+               Margin="0 5 0 5"
+               MouseLeftButtonDown="tb_notMember_MouseLeftButtonDown"/>
+            </StackPanel>
+            <!-- Back button -->
         </StackPanel>
     </Border>
-
 </Window>
