--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
@@ -6,76 +6,81 @@
         xmlns:local="clr-namespace:Tool_Data_Inventory_Manager"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Reset Password" Height="400" Width="650"
+        Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
-        Icon="/Resources/Tool-Data-Icon.png">
-    <Border Width="650"
-            Height="400"
-            Background="White"
-            CornerRadius="6">
-        <Border.Effect>
-            <DropShadowEffect BlurRadius="15"
-                              Direction="-90" 
-                              RenderingBias="Quality" 
-                              ShadowDepth="2" 
-                              Color="Gray" />
-        </Border.Effect>
-        <StackPanel Orientation="Vertical"
-                    Margin="10,20,10,20">
-            <TextBlock Text="Reset Password" 
-                       FontSize="25"
+        Style="{StaticResource RoundedWindowStyle}">
+
+    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+        <StackPanel Style="{StaticResource WrapperStackPanel}" Width="630" Height="380">
+
+            <!-- Bezárás gomb -->
+            <Button Style="{StaticResource CloseButtonStyle}"
+                    x:Name="btn_Close"
+                    Click="btn_Close_Click"/>
+
+            <!-- Cím -->
+            <TextBlock Text="Reset Password"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       FontWeight="Bold"
-                       Padding="10"/>
+                       Style="{StaticResource h1}"/>
+
+            <!-- Tartalomrács -->
             <Grid VerticalAlignment="Center">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="New Password:" 
+                <!-- Új jelszó -->
+                <TextBlock Text="New Password"
                            Grid.Row="0"
-                           Margin="89,20,0,5"
-                           HorizontalAlignment="Left"/>
-                <PasswordBox x:Name="pb_NewPassword"
-                             Grid.Row="0"
-                             Padding="0,5"
-                             Width="254"
-                             BorderThickness="0,0,0,1"
-                             HorizontalAlignment="Center"
-                             Margin="0,10,0,10"/>
+                           Margin="80,11,0,0"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Style="{StaticResource p}"/>
+                <PasswordBox 
+                    x:Name="pb_NewPassword"
+                    Margin="25,0,0,10"
+                    Grid.Row="0"
+                    Width="260"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource ModernPasswordBox}"/>
 
-                <TextBlock Text="Confirm Password:" 
+                <!-- Megerősítés -->
+                <TextBlock Text="Confirm Password"
                            Grid.Row="1"
-                           Margin="89,20,0,5"
-                           HorizontalAlignment="Left"/>
-                <PasswordBox x:Name="pb_ConfirmPassword"
-                             Grid.Row="1"
-                             Padding="0,5"
-                             Width="254"
-                             BorderThickness="0,0,0,1"
-                             HorizontalAlignment="Center"
-                             Margin="0,10,0,10"/>
-
-                <Button x:Name="btn_Save"
-                        Content="Save New Password"
-                        Grid.Row="2"
-                        Margin="0,20,0,10"
-                        Width="250"
-                        HorizontalAlignment="Center"
-                        Click="btn_Save_Click"/>
+                           Margin="80,10,0,0"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Style="{StaticResource p}"/>
+                <PasswordBox 
+                    x:Name="pb_ConfirmPassword"
+                    Margin="25,0,0,10"
+                    Grid.Row="1"
+                    Width="260"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource ModernPasswordBox}"/>
             </Grid>
 
+            <!-- Mentés gomb -->
+            <Button x:Name="btn_Save"
+                    Content="Save New Password"
+                    Margin="0,20,0,0"
+                    Width="180"
+                    Height="35"
+                    HorizontalAlignment="Center"
+                    Click="btn_Save_Click"/>
+
+            <!-- Vissza gomb -->
             <Button Content="Back"
-                   x:Name="btn_Back"
-                   Margin="0,20,0,0"
-                   VerticalAlignment="Bottom"
-                   HorizontalAlignment="Center"
-                   Width="100"
-                   Click="btn_Back_Click"/>
+                    x:Name="btn_Back"
+                    Margin="0,10,0,0"
+                    Width="100"
+                    Height="30"
+                    HorizontalAlignment="Center"
+                    Click="btn_Back_Click"/>
         </StackPanel>
     </Border>
 </Window>
